# AI-rubiks-cube

./: .gitignore  README.md  get-data.py  main.ipynb  pyproject.toml
notebooks/: lstm-is-solved.ipynb  synthetic-data.ipynb  tokenizer.ipynb  transformer-is-solved.ipynb
src/: get-data.py
utils/: pyproject.toml
utils/src/utils/: __init__.py
